compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_const_const.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const wibble = 1\nconst wibble = 2"
---
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ const wibble = 1
  │ ^^^^^^^^^^^^ First defined here
2 │ const wibble = 2
  │ ^^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
