compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_const_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1200
expression: "const wibble = 1\nfn wibble() { 2 }"
---
----- SOURCE CODE
const wibble = 1
fn wibble() { 2 }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ const wibble = 1
  │ ^^^^^^^^^^^^ First defined here
2 │ fn wibble() { 2 }
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
