compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_extfn_const.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1189
expression: "\n@external(erlang, \"module1\", \"function1\")\nfn wibble() -> Float\n\nconst wibble = 2"
---
----- SOURCE CODE

@external(erlang, "module1", "function1")
fn wibble() -> Float

const wibble = 2

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:3:1
  │
3 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ First defined here
4 │ 
5 │ const wibble = 2
  │ ^^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
