compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_extfn_extfn.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1144
expression: "\n@external(erlang, \"module1\", \"function1\")\nfn wibble() -> Float\n@external(erlang, \"module2\", \"function2\")\nfn wibble() -> Float\n"
---
----- SOURCE CODE

@external(erlang, "module1", "function1")
fn wibble() -> Float
@external(erlang, "module2", "function2")
fn wibble() -> Float


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:3:1
  │
3 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ First defined here
4 │ @external(erlang, "module2", "function2")
5 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
