compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_extfn_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n@external(erlang, \"module1\", \"function1\")\nfn wibble() -> Float\n\nfn wibble() { 2 }"
---
error: Duplicate definition
  ┌─ /src/one/two.rakun:3:1
  │
3 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ First defined here
4 │ 
5 │ fn wibble() { 2 }
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
