compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_function_names_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn dupe() { 1 }\nfn dupe(x) { x }"
---
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ fn dupe() { 1 }
  │ ^^^^^^^^^ First defined here
2 │ fn dupe(x) { x }
  │ ^^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
